--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,49 @@
     transform: rotate(360deg);
   }
 }
+
+/* Boostrap */
+.navbar>.container-fluid {
+  justify-content: start;
+}
+
+.my-css {
+  flex-grow: 1;
+  display: flex;
+  justify-content: end;
+}
+
+.my-btn {
+  margin-bottom: 2rem;
+  border: 1px solid #000 !important;
+}
+
+.d-flex.flex-column.flex-shrink-0.p-3.text-white.bg-dark {
+  height: 92vh;
+}
+
+.content {
+  padding: 30px;
+  flex: 1;
+}
+
+.manage-money {
+  display: flex;
+}
+
+.box-money {
+  border: 1px solid #000;
+  width: 150px;
+  height: 150px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.filter {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
